--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,30 +12,33 @@ jobs:
     name: Build HTML & PDF
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: '3.2'
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.2"
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
-    - name: Build Documentation
-      run: |
-        mkdir -p build
-        make all
+      - name: Validate Assets
+        run: make check-assets
 
-    - name: Upload PDF Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: pegs-requirements-pdf
-        path: build/index.pdf
-        retention-days: 14
+      - name: Build Documentation
+        run: |
+          mkdir -p build
+          make all
 
-    - name: Upload HTML Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: pegs-requirements-html
-        path: build/index.html
-        retention-days: 14
+      - name: Upload PDF Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pegs-requirements-pdf
+          path: build/index.pdf
+          retention-days: 14
+
+      - name: Upload HTML Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pegs-requirements-html
+          path: build/index.html
+          retention-days: 14
