--- a/.github/workflows/generate-specs.yml
+++ b/.github/workflows/generate-specs.yml
@@ -4,6 +4,7 @@ on:
     push:
         paths:
             - "requirements.csv"
+            - "structure.csv"
     workflow_dispatch:
 permissions:
     contents: write
