--- a/.github/workflows/generate-specs.yml
+++ b/.github/workflows/generate-specs.yml
@@ -24,3 +24,9 @@ jobs:
                   project-name: "MacOS Clipboard Manager Specifications"
                   authors: "Hugo Goncalves, Lea Poisson"
                   #   logo-path: "assets/image.svg"
+
+            - name: Upload Artifacts
+              uses: actions/upload-artifact@v4
+              with:
+                  name: specifications
+                  path: docs/build
