--- a/.github/workflows/generate-specs.yml
+++ b/.github/workflows/generate-specs.yml
@@ -29,4 +29,4 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                   name: specifications
-                  path: docs/build
+                  path: docs/build/*.pdf
